force-app/main/default/objects/Sales_Order_Line__c/fields/Actual_Qty_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Actual_Qty_Ordered__c</fullName>
    <label>Actual Qty Ordered</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>