force-app/main/default/objects/Sales_Order_Line__c/fields/Balance_Qty_to_Allocate__c.field-meta.xml
<CustomField>
    <fullName>Balance_Qty_to_Allocate__c</fullName>
    <formula>IF (ISPICKVAL(Status__c, &quot;Rejected&quot;) || ISPICKVAL(Status__c, &quot;Cancelled&quot;),0,Qty_Ordered__c  -  Qty_Allocated__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Balance Qty to Allocate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>