force-app/main/default/objects/Sales_Order_Line__c/fields/Line_Total_GMV__c.field-meta.xml
<CustomField>
    <fullName>Line_Total_GMV__c</fullName>
    <formula>IF( Product_Name__r.RecordType.DeveloperName = &apos;Discount&apos;,0, Qty_Ordered__c * Retail_Wholesale_Price__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Total GMV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>