force-app/main/default/objects/Sales_Order_Line__c/fields/MOQ__c.field-meta.xml
<CustomField>
    <fullName>MOQ__c</fullName>
    <formula>Brand_Quote_Line__r.MOQ__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty per Case (MOQ)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>