force-app/main/default/objects/Sales_Order_Line__c/fields/Product_Title__c.field-meta.xml
<CustomField>
    <fullName>Product_Title__c</fullName>
    <label>Product Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Product_Title</valueSetName>
    </valueSet>
</CustomField>