force-app/main/default/objects/Sales_Order_Line__c/fields/Promised_Date__c.field-meta.xml
<CustomField>
    <fullName>Promised_Date__c</fullName>
    <label>Promised Date</label>
    <type>Date</type>
</CustomField>