force-app/main/default/objects/Sales_Order_Line__c/fields/Qty_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Qty_Allocated__c</fullName>
    <label>Qty Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>