force-app/main/default/objects/Sales_Order_Line__c/fields/Qty_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Qty_Invoiced__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Qty Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>