force-app/main/default/objects/Sales_Order_Line__c/fields/Qty_Ordered__c.field-meta.xml
<CustomField>
    <fullName>Qty_Ordered__c</fullName>
    <inlineHelpText>Qty per Case (MOQ) * Order Qty (Cases).</inlineHelpText>
    <label>Qty Ordered</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>