force-app/main/default/objects/Sales_Order_Line__c/fields/Qty_To_Invoiced__c.field-meta.xml
<CustomField>
    <fullName>Qty_To_Invoiced__c</fullName>
    <formula>Qty_Ordered__c -  Qty_Invoiced__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Qty To Invoiced</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>