force-app/main/default/objects/Sales_Order_Line__c/fields/Quantity_Cases__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Cases__c</fullName>
    <formula>Brand_Quote_Line__r.Quantity_Cases__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Qty (Cases)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>