force-app/main/default/objects/Sales_Order_Line__c/fields/Test_VJ__c.field-meta.xml
<CustomField>
    <fullName>Test_VJ__c</fullName>
    <formula>Ownership_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test VJ</label>
    <type>Text</type>
</CustomField>