force-app/main/default/objects/Sales_Order_Line__c/fields/Total_QA_Change_fee__c.field-meta.xml
<CustomField>
    <fullName>Total_QA_Change_fee__c</fullName>
    <label>Total QA Change fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>