force-app/main/default/objects/Sales_Order_Line__c/fields/Total_SOLI_Revision__c.field-meta.xml
<CustomField>
    <fullName>Total_SOLI_Revision__c</fullName>
    <label>Total SOLI Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>