force-app/main/default/objects/Sales_Order_Line__c/fields/UID__c.field-meta.xml
<CustomField>
    <fullName>UID__c</fullName>
    <label>UID</label>
    <length>200</length>
    <type>Text</type>
</CustomField>