force-app/main/default/objects/Sales_Order_Line__c/fields/Weight_to_Order_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Weight_to_Order_Ratio__c</fullName>
    <formula>if(Sales_Order__r.Total_Weight_lbs__c &gt; 0, Total_Weight_lbs__c / Sales_Order__r.Total_Weight_lbs__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weight to Order Ratio (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>