force-app/main/default/objects/Sales_Order_Line__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>true</active>
    <description>Used for Retail Shipments - Ship Confirm to &quot;Delivered&quot; Inventory Location</description>
    <label>Product</label>
</RecordType>