force-app/main/default/objects/Sales_Order_Line__c/recordTypes/Service.recordType-meta.xml
<RecordType>
    <fullName>Service</fullName>
    <active>true</active>
    <description>Used only for Packaging and or Services - Ship Confirm to &quot;Converted&quot; Inventory Location</description>
    <label>Service</label>
</RecordType>